# climpred

./: .codecov.yml  .coveragerc  .coveralls.yml  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .unibeautifyrc.json  .unibeautifyrc.yml  AGENTS.md  CHANGELOG.rst  CHANGES.md  CHANGES.txt  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  Demo_prediction.ipynb  HOWTOCONTRIBUTE.rst  HOWTORELEASE.rst  MANIFEST.in  PLAN.md  README.md  README.rst  REDUCE_TESTING_TIME.md  UPDATE.md  UV_MIGRATION.md  bootstrap.py  paper.md.md  pyproject.toml  readthedocs.yml  requirements.txt  requirements_upstream.txt  setup.cfg  setup.py  testbed.ipynb  to_add.md
.binder/: environment.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: benchmarks.yml  cancel-duplicate-runs.yaml  ci-pre-commit.yml  climpred_installs.yml  climpred_testing.yml  comment_binder_pr_link.yml  lint.yml  publish-production-pypi.yml  publish-staging-testpypi.yml  python-package.yml  python-publish.yml  testing.yml  upstream-dev-ci.yml
asv_bench/: asv.conf.json
asv_bench/benchmarks/: README_CI.md  __init__.py  benchmarks_HindcastEnsemble.py  benchmarks_PredictionEnsemble.py  benchmarks_hindcast.py  benchmarks_perfect_model.py
ci/: docs.yml  environment-dev-3.6.yml  install-upstream-wheels.sh  requirements-py36.yml  run-linter.sh
ci/requirements/: climpred-dev.yml  docs.yml  docs_notebooks.yml  environment-dev-3.6.yml  environment-dev.yml  maximum-tests.yml  minimum-tests.yml
climpred/: __init__.py  alignment.py  bias_correction.py  bias_reduction.py  bias_removal.py  bootstrap.py  carbon.py  checks.py  classes.py  colormaps.py  comparisons.py  conftest.py  constants.py  create_climpred_data.py  exceptions.py  filtering.py  graphics.py  horizon.py  loadutils.py  logging.py  metrics.py  np_metrics.py  options.py  physics.py  predictability_horizon.py  prediction.py  reference.py  relative_entropy.py  smoothing.py  stats.py  test_prediction.py  testing.py  toy.py  tutorial.py  utils.py  vis.py
climpred/preprocessing/: mpi.py  shared.py
climpred/tests/: __init__.py  conftest.py  test_HindcastEnsemble_class.py  test_HindcastEnsemble_verify_integration.py  test_PerfectModelEnsemble_class.py  test_PerfectModelEnsemble_verify_integration.py  test_PredictionEnsemble.py  test_PredictionEnsemble_math.py  test_accumulate.py  test_alignment.py  test_alignment_old.py  test_bias_removal.py  test_bootstrap.py  test_checks.py  test_comparisons.py  test_compute_dims.py  test_create_climpred_data.py  test_demo_data.py  test_doppyo_metrics.py  test_effective_p_value.py  test_graphics.py  test_hindcastEnsemble_class.py  test_hindcast_prediction.py  test_horizon.py  test_lead_time_resolutions.py  test_loadutils.py  test_logging.py  test_logging_hindcast.py  test_map.py  test_metrics.py  test_metrics_perfect.py  test_options.py  test_perfectModelEnsemble_class.py  test_perfect_model_prediction.py  test_predictability_horizon.py  test_prediction.py  test_preprocessing.py  test_probabilistic.py  test_reference.py  test_reference_prediction.py  (+10 more)
climpred/versioning/: print_versions.py
docs/: .gitignore  API.rst  conf.py  high_level_functions.rst  index.rst  metrics.rst  requirements.txt  reset_and_view.sh  sample_data.rst
docs/source/: Untitled.ipynb  alignment.ipynb  alignment.rst  api.rst  baselines.rst  bias_reduction.ipynb  bias_removal.ipynb  climpred.bib  code_of_conduct.rst  comparisons.rst  conf.py  contributing.rst  contributors.rst  examples.rst  helpful-links.rst  index.rst  initialized-datasets.rst  literature.rst  llms.txt  metrics.rst  prediction-ensemble-object.ipynb  publications.rst  quick-start.ipynb  quick-start.rst  reference_forecast.rst  refs.bib  related-packages.rst  release_procedure.rst  sample-data.ipynb  scope.rst  setting-up-data.rst  significance.rst  smoothing.ipynb  terminology.rst  why-climpred.rst
esmtools/: __init__.py  colormaps.py  conversions.py  ebus.py  filtering.py  mpas.py  prediction.py  statistics.py  stats.py  ufunc.py  vis.py  visualization.py
esmtools/ebus/: __init__.py  boundaries.py
esmtools/tests/: test_prediction.py
joss/: codemeta.json  paper.bib  paper.md
ncl_colors/: amwg.rgb  amwg.rgb~  brown_blue.rgb  cmp_flux.rgb  cools.rgb  gmt_cool.rgb  green_magenta.rgb  modify_raw_tables.ipynb  nice_gfdl.rgb  output_array_rgb.ipynb
notebooks/: DPLE_hindcast_prediction.ipynb  DPLE_hindcast_prediction.ipynb.REMOVED.git-id  Relative_Entropy_PM.ipynb  Relative_Entropy_demo.ipynb  aaron_dple_notebook.ipynb  decadal_prediction.ipynb  hindcast_prediction_demo.ipynb  object_oriented_demo.ipynb  object_oriented_demo.ipynb.REMOVED.git-id  perfect-model_predictability.ipynb  perfect-model_predictability.ipynb.REMOVED.git-id  reconstruction_based_prediction_demo.ipynb  stats_demo_and_test.ipynb
sample_data/: SST.002.200001-200012.nc.REMOVED.git-id
sample_data/prediction/: CESM-DP-LE.SSS.global.md5  CESM-DP-LE.SSS.global.nc  CESM-DP-LE.SST.annmean.anom.md5  CESM-DP-LE.SST.annmean.anom.nc  CESM-DP-LE.SST.global.md5  CESM-DP-LE.SST.global.nc  CESM-LE.global_mean.SST.1955-2015.md5  CESM-LE.global_mean.SST.1955-2015.nc  ERSSTv4.global.mean.md5  ERSSTv4.global.mean.nc  FOSI.SSS.global.md5  FOSI.SSS.global.nc  FOSI.SST.global.md5  FOSI.SST.global.nc  MPIESM_miklip_baseline1-assim-SST-global.md5  MPIESM_miklip_baseline1-assim-SST-global.nc  MPIESM_miklip_baseline1-hind-SST-global.md5  MPIESM_miklip_baseline1-hind-SST-global.nc  MPIESM_miklip_baseline1-hist-SST-global.md5  MPIESM_miklip_baseline1-hist-SST-global.nc  PM_MPI-ESM-LR_control.md5  PM_MPI-ESM-LR_control.nc  PM_MPI-ESM-LR_control3d.md5  PM_MPI-ESM-LR_control3d.nc.REMOVED.git-id  PM_MPI-ESM-LR_ds.md5  PM_MPI-ESM-LR_ds.nc  PM_MPI-ESM-LR_ds3d.md5  PM_MPI-ESM-LR_ds3d.nc.REMOVED.git-id  README.md  g.e11_LENS.GECOIAF.T62_g16.009.pop.h.SST.024901-031612.md5  g.e11_LENS.GECOIAF.T62_g16.009.pop.h.SST.024901-031612.nc  make_check_sums.py
specs/: UV_MIGRATION.md
tests/: colormap_test.py
(+260 files in other folders)
