[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=77", "setuptools-scm>=8", "wheel" ]

[project]
name = "climpred"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = "MIT"
license-files = [ "LICENSE.txt" ]
maintainers = [
  { name = "Aaron Spring", email = "aaron.spring@mpimet.mpg.de" },
  { name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca" },
]
authors = [
  { name = "Aaron Spring", email = "aaron.spring@mpimet.mpg.de" },
  { name = "Riley Brady", email = "riley.brady@colorado.edu" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dynamic = [ "description", "version" ]
dependencies = [
  "cf-xarray>=0.8",
  "cftime>=1.6.3",
  "dask>=2023.4",
  "numpy>=2",
  "packaging>=23",
  "pandas>=2",
  "pooch>=1.8",
  "xarray>=2024.5",
  "xskillscore>=0.0.29"
]
[project.optional-dependencies]
accel = [ "bottleneck", "numba>=0.57" ]
bias-correction = [ "bias-correction>=0.4", "xclim>=0.52", "xsdba>=0.4; python_version>='3.10'" ]
complete = [ "climpred[accel,bias-correction,io,relative_entropy,test,viz,vwmp]" ]
docs = [
  "climpred[complete]",
  "myst-nb",
  "sphinx>=7",
  "sphinx-book-theme>=1",
  "sphinx-copybutton",
  "sphinxcontrib-bibtex",
  "sphinxext-opengraph>=0.8",
  "tqdm"
]
io = [ "h5netcdf", "h5py", "netcdf4" ]  # use h5netcdf when encountering seg faults as in GitHub Actions CI
regridding = [ "xesmf" ]  # for installation see https://pangeo-xesmf.readthedocs.io/
relative-entropy = [ "eofs" ]
test = [
  "netcdf4",
  "pre-commit",
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-lazy-fixtures>=1.4",
  "pytest-timeout",
  "pytest-xdist>=3.8"
]
viz = [ "matplotlib", "nc-time-axis>=1.4" ]
vwmp = [ "xrft" ]
[project.urls]
"Changelog" = "https://climpred.readthedocs.io/en/stable/changelog.html"
"Homepage" = "https://climpred.readthedocs.io/en/stable/"
"Issue Tracker" = "https://github.com/pangeo-data/climpred/issues"
"Source" = "https://github.com/pangeo-data/climpred"

[dependency-groups]
dev = [ "black", "climpred[docs]", "flake8", "isort", "jupyterlab", "pylint", "pytest-sugar", "ty>=0.0.1a14" ]
docs = [ "climpred[docs]" ]

[tool.setuptools]
[tool.setuptools.dynamic]
description = { file = "src/climpred/__init__.py" }

[tool.setuptools_scm]
fallback_version = "999"
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.black]
line-length = 88
target-version = [ "py39", "py310", "py311", "py312", "py313" ]

[tool.isort]
known_first_party = "climpred"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
combine_as_imports = true
skip = [ "docs/source/conf.py" ]

[tool.pyproject-fmt]
table_format = "long"
collapse_tables = [ "project" ]
expand_tables = [ "project.optional-dependencies", "project.urls" ]
max_supported_python = "3.13"

[tool.pytest]
[tool.pytest.ini_options]
python_files = [ "test_*.py" ]
addopts = [ "--color=yes", "--verbose" ]
testpaths = [ "climpred/tests" ]
filterwarnings = [
  # xarray
  "ignore: Using a non-tuple sequence for multidimensional indexing is deprecated:FutureWarning",
  # upstream xarray
  "ignore: Mean of empty slice:RuntimeWarning",
  # only shows up during CI: no idea where its coming from, something inside bootstrapping
  "ignore: `np.alen` is deprecated, use `len` instead:DeprecationWarning",
  # ignore UserWarnings raise by warnings.warn() which do not break functionality
  # therefore ignore in testing
  "ignore::UserWarning",
  # xarray
  "ignore: tostring:DeprecationWarning",
  # properscoring
  "ignore: invalid value encountered:RuntimeWarning",
  "ignore: divide by zero:RuntimeWarning",
  # xarray
  "ignore: 'base' in .resample():FutureWarning",
  # matplotlib
  "ignore: More than 20 figures:RuntimeWarning",
  # numpy https://stackoverflow.com/questions/40659212/futurewarning-elementwise-comparison-failed-returning-scalar-but-in-the-futur#46721064
  "ignore: elementwise comparison failed",
  # pydap
  "ignore: Using or importing the ABCs from",
  # xarray
  "ignore: Passing method to CFTimeIndex.get_loc is deprecated",
  # statsmodels
  "ignore: pandas.Int64Index is deprecated"
]
markers = [
  "mistral: tests requiring being on MPI supercomputer",
  "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.pyright]
typeCheckingMode = "off"

[tool.ty]
[tool.ty.analysis]
allowed-unresolved-imports = [
  "bias_correction.**",
  "bottleneck.**",
  "cf_xarray.**",
  "cftime.**",
  "dask.**",
  "distributed.**",
  "eofs.**",
  "fsspec.**",
  "intake.**",
  "intake_esm.**",
  "matplotlib.**",
  "nc_time_axis.**",
  "netCDF4.**",
  "numba.**",
  "numpy.**",
  "packaging.**",
  "pandas.**",
  "pooch.**",
  "properscoring.**",
  "pytest.**",
  "pytest_lazy_fixtures.**",
  "scipy.**",
  "setuptools.**",
  "toolz.**",
  "tqdm.**",
  "xarray.**",
  "xclim.**",
  "xesmf.**",
  "xrft.**",
  "xsdba.**",
  "xskillscore.**"
]
[tool.ty.rules]
invalid-assignment = "ignore"
invalid-argument-type = "ignore"
missing-argument = "ignore"
unknown-argument = "ignore"
[tool.ty.src]
exclude = [ "asv_bench/", "docs/" ]
